# cinderBackend

./: .gitignore  README.md  docker-compose.letsencrypt.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  vhost.d
.github/workflows/: docker.ansible.action.yml
cb/: account_adapter.py  mocks.py  models.py  rq_tasks.py  search.sh  serializers.py  tests.py  token_strategy.py  utils.py  views.py  viewsets.py
cb/migrations/: 0001_initial.py  0002_rename_content_loaded_projectfile_load_file_content_and_more.py  0003_alter_project_encrypted.py  0004_comparisonmatrix_file_sampleannotation_file.py  0005_searchresult.py  0006_searchsession_remove_searchresult_user_and_more.py  0007_searchsession_analysis_groups.py  0008_searchsession_user.py  0009_searchresult_file_searchresult_headline_results.py  0010_analysisgroup_phosphorylation.py  0011_searchsession_completed_searchsession_in_progress_and_more.py  0012_searchsession_found_terms.py  0013_rename_phosphorylation_analysisgroup_ptm.py  0014_projectfile_extra_data.py  0015_searchsession_log10_p_value_searchsession_log2_fc.py  0016_rename_headline_results_searchresult_searched_data_and_more.py  0017_rename_foldchange_searchresult_log10_p_and_more.py  0018_searchsession_failed.py  0019_analysisgroup_curtain_link.py  0020_species_project_organism.py  0021_remove_project_organism_project_species.py  0022_rename_synonyms_species_synonym.py  0023_searchresult_copy_number_searchresult_rank_and_more.py  0024_remove_analysisgroup_ptm_and_more.py  0025_alter_analysisgroup_analysis_group_type.py  0026_curtaindata.py  (+19 more)
certs/: nginx.crt  nginx.key
cinderBackend/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile-frontend  Dockerfile-frontend-dev  Dockerfile-nginx  Dockerfile-worker
nginx-conf/: cinderBackend.conf  nginx-prod.conf
playbooks/: docker.ansible.yml  docker.letsencrypt.ansible.yml
(+6 files in other folders)
