[tool.poetry]
name = "cinderbackend"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-cors-headers = "^4.3.1"
pandas = "^2.2.2"
django-filter = "^24.2"
psycopg2-binary = "^2.9.9"
channels = "^4.1.0"
channels-redis = {extras = ["cryptography"], version = "^4.2.0"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
websockets = "^14.2"
whitenoise = "^6.6.0"
requests = "^2.32.3"
httpx = "^0.28.1"
djangorestframework = "^3.15.1"
django-rq = "^3.0.0"
drf-chunked-upload = "^0.6.0"
django-redis = "^5.4.0"
django-dbbackup = "^4.1.0"
gunicorn = "^23.0.0"
curtainutils = "^0.1.18"
pronto = "^2.5.8"
sdrf-pipelines = "^0.0.31"
uvicorn-worker = "^0.3.0"
django-allauth = "^65.3.1"
fido2 = "^1.2.0"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
